# Navigator

./: .gitignore  TODO
gnc/navigator_perception/: CMakeLists.txt  package.xml  scan_the_code_detector.cc
gnc/navigator_perception/helper/: color_tracker.cc  model.cc  object_tracker.cc  stereomodelfitter.cc
gnc/navigator_perception/include/navigator_vision_lib/: color_tracker.hpp  model.h  object_tracker.hpp  scan_the_code_detector.hpp  stereomodelfitter.h
gnc/navigator_perception/nodes/: scan_the_code_detector.cc
mission_control/navigator_launch/config/: stereo_shape_detector.yaml
mission_control/navigator_launch/launch/: bag.launch
mission_control/navigator_launch/launch/subsystems/: tf.launch
mission_control/navigator_missions/nav_missions/: back_and_forth.py  circle_tower.py  explore.py  find_the_break.py  scan_the_code.py  scan_the_code.py.autosave
mission_control/navigator_missions/navigator_singleton/: navigator.py  pose_editor.py  vision_services.yaml
mission_control/navigator_missions/nodes/: mission_planner.py  missions.yaml
mission_control/navigator_motion_planner/: object_classification.py
mission_systems/navigator_scan_the_code/navigator_scan_the_code/: scan_the_code_mission.py
mission_systems/navigator_scan_the_code/navigator_scan_the_code/scan_the_code_lib/: color_finder.py  rect_finder_clustering.py  scan_the_code_perception.py  scanthecode_model.py
perception/navigator_lidar_oa/src/: OccupancyGrid.h  lidarParams.cpp
perception/navigator_vision/nodes/: object_publisher.py  object_recorder.py
sensor_control/navigator_lidar_oa/: CMakeLists.txt
sensor_control/navigator_lidar_oa/src/: ConnectedComponents.h  bounding_boxes.h  lidar.cpp  objects.h
simulation/navigator_gazebo/launch/: goose.launch
simulation/navigator_gazebo/models/shapes/: scan_the_code.sdf
utils/navigator_msgs/: CMakeLists.txt
utils/navigator_msgs/msg/: ColoramaDebug.msg
utils/navigator_tools/cfg/: course_c.yaml
utils/on_boot/launch/: boot.launch
